# sensor-plugins

./: .project  CMakeLists.txt
packaging/: sensor-hal.spec  sensor-plugins.spec
src/: CMakeLists.txt  sensor_module_create.cpp
src/interface/: CMakeLists.txt  sensor_hal.h  sensor_hal_base.h
src/lib/: CMakeLists.txt  sensor_common.h
src/plugins/accel/: CMakeLists.txt  accel_sensor_hal.cpp  accel_sensor_hal.h
src/plugins/bio_led_red/: CMakeLists.txt  bio_led_red_sensor_hal.cpp  bio_led_red_sensor_hal.h
src/plugins/geo/: CMakeLists.txt  geo_sensor_hal.cpp  geo_sensor_hal.h
src/plugins/gyro/: CMakeLists.txt  gyro_sensor_hal.cpp  gyro_sensor_hal.h
src/plugins/light/: CMakeLists.txt  light_sensor_hal.cpp  light_sensor_hal.h
src/plugins/pressure/: CMakeLists.txt  pressure_sensor_hal.cpp  pressure_sensor_hal.h
src/plugins/proxi/: CMakeLists.txt  proxi_sensor_hal.cpp  proxi_sensor_hal.h
src/plugins/rotation_vector/rv_raw/: CMakeLists.txt  rv_raw_sensor_hal.cpp  rv_raw_sensor_hal.h
src/plugins/temperature/: CMakeLists.txt  temperature_sensor_hal.cpp  temperature_sensor_hal.h
src/plugins/ultraviolet/: CMakeLists.txt  ultraviolet_sensor_hal.cpp  ultraviolet_sensor_hal.h
src/shared/: CMakeLists.txt  sensor-plugins.pc.in  sensor_hal.cpp  sensor_hal.h  sensor_hal_interface.h
