cmake_minimum_required(VERSION 2.6)
project(sensor_hal_src CXX)

include_directories(${CMAKE_SOURCE_DIR}/src/lib)
include_directories(${CMAKE_SOURCE_DIR}/src/interface)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

IF("${ACCEL}" STREQUAL "ON")
add_subdirectory(plugins/accel)
ENDIF()
IF("${GYRO}" STREQUAL "ON")
add_subdirectory(plugins/gyro)
ENDIF()
IF("${PROXI}" STREQUAL "ON")
add_subdirectory(plugins/proxi)
ENDIF()
IF("${LIGHT}" STREQUAL "ON")
add_subdirectory(plugins/light)
ENDIF()
IF("${GEO}" STREQUAL "ON")
add_subdirectory(plugins/geo)
ENDIF()
IF("${PRESSURE}" STREQUAL "ON")
add_subdirectory(plugins/pressure)
ENDIF()
IF("${TEMPERATURE}" STREQUAL "ON")
add_subdirectory(plugins/temperature)
ENDIF()
IF("${ULTRAVIOLET}" STREQUAL "ON")
add_subdirectory(plugins/ultraviolet)
ENDIF()
IF("${BIO_LED_RED}" STREQUAL "ON")
add_subdirectory(plugins/bio_led_red)
ENDIF()
IF("${RV}" STREQUAL "ON")
add_subdirectory(plugins/rotation_vector/rv_raw)
ENDIF()

add_subdirectory(lib)
add_subdirectory(interface)
